--- a/app/src/main/res/layout/list_item_film.xml
+++ b/app/src/main/res/layout/list_item_film.xml
@@ -14,7 +14,7 @@
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:layout_gravity="center"
-            android:contentDescription="@string/film_poster"
+            android:contentDescription="@string/movie_poster"
             android:scaleType="centerCrop"/>
         <LinearLayout
             android:orientation="vertical"
@@ -27,14 +27,14 @@
                 android:layout_height="wrap_content"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
-                android:text="@string/title_film_name"/>
+                android:text="@string/title_movie_name"/>
             <TextView
                 android:id="@+id/film_year"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
-                android:text="@string/title_film_year"/>
+                android:text="@string/title_movie_year"/>
         </LinearLayout>
         <CheckBox
             android:id="@+id/check_ended"
